istio/istio-virtualservice-abtest.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myfirst-virtual-service
  namespace: istio-demo
spec:
  hosts:
  - "*"
  gateways: 
  - myfirst-gateway
  http:
  - name: backend
    match:
    - uri:
        prefix: /random
    route:
    - destination:
        host: node-backend-service.istio-demo.svc.cluster.local
    retries:
      attempts: 4
      perTryTimeout: 3s
  - name: frontend-ab
    match:
      - headers:
         abtest:
          exact: "secretheaders"
    route:
    - destination:
        host: nginx-frontend-service.istio-demo.svc.cluster.local
        subset: v2
  - name: frontend
    route:
    - destination:
        host: nginx-frontend-service.istio-demo.svc.cluster.local
        subset: v1
