istio/istio-virtualservice-error.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myfirst-virtual-service
  namespace: istio-demo
spec:
  hosts:
  - "*"
  gateways: 
  - myfirst-gateway
  http:
  - name: backend
    fault:
      abort:
        httpStatus: 503
        percentage:
          value: 50
    match:
    - uri:
        prefix: /random
    route:
    - destination:
        host: node-backend-service.istio-demo.svc.cluster.local
    retries:
      attempts: 4
      perTryTimeout: 3s
  - name: frontend
    route:
    - destination:
        host: nginx-frontend-service.istio-demo.svc.cluster.local
